# dioxus-tutorial

./: README.md  flake.nix
v01_web/: Cargo.toml  Dioxus.toml
v02_desk/: Cargo.toml  Dioxus.toml
v02_desk/assets/: main.css
v02_desk/src/: main.rs
v03_mobile/: Cargo.toml  Dioxus.toml
v11_full/: Cargo.toml  Dioxus.toml
