[package]
name = "v02_desk"
version = "0.1.0"
authors = ["mikaelnguyenpg <mikaelnguyen.pg@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = [] }
tokio = { version = "1.51.1" }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
